Extract sieve "class"
This will be the model for every version 2 for each language, i.e., a
seperate class file and app file to create an instance of the class.

--- a/src/main/c/app2/Makefile
+++ b/src/main/c/app2/Makefile
@@ -30,7 +30,7 @@ all: targets $(BINDIR)/app test
 $(OBJDIR)/%.o : $(SRCDIR)/%.c
 	@$(CC) $(CCFLAGS) -c $? -o $@
 
-$(BINDIR)/app : $(OBJDIR)/app.o $(OBJDIR)/main.o
+$(BINDIR)/app : $(OBJDIR)/sieve.o $(OBJDIR)/app.o
 	@$(CC) $(LDFLAGS) $? -o $@
 
 .PHONY: targets clean test
