Refactor into sieve.py
Importing sieve.py will cause Python to generate bytecode and store it
in __pycache__, so modify .gitignore to ignore this directory and change
the makefile's clean target to remove this directory.

--- a/src/main/python/Makefile
+++ b/src/main/python/Makefile
@@ -22,7 +22,7 @@ SIEVERANGE = 1000
 all: clean test
 
 clean:
-	@# suppress Nothing to be done for `clean' messages
+	@$(RM) -r __pycache__
 
 test:
 	@for subproj in $(SUBPROJS); do echo python/$$subproj; ./$$subproj.py $(SIEVERANGE); done
