--- a/src/main/python/Makefile
+++ b/src/main/python/Makefile
@@ -13,13 +13,14 @@
 # License for the specific language governing permissions and limitations
 # under the License.
 #
-# SPDX-License-Identifier: Apache-2.0
-#
 SUBPROJS = $(patsubst %.py, %, $(wildcard app*))
 
 SIEVERANGE = 1000
 
 all: clean test
+
+$(SUBPROJS):
+	./$@.py $(SIEVERANGE)
 
 clean:
 	@$(RM) -r __pycache__
