Compile to pedantic C11 & C++17 stamdards
Fix warnings that this change picked up, unused variables in
c/app2/app.c and cpp/app2/app.cpp/.

--- a/src/main/c/app/Makefile
+++ b/src/main/c/app/Makefile
@@ -14,8 +14,8 @@
 # under the License.
 #
 CC = gcc
-CCFLAGS =
-LDFLAGS = -O
+CCFLAGS = -std=c11 -Wall -Werror -pedantic
+LDFLAGS =
 
 SRCDIR = .
 BINDIR = bin
