Add sieve .so softlink to /usr/local/lib
If loader config directory exists, add our .so to it.

--- a/docker/libcsieve.conf
+++ b/docker/libcsieve.conf
@@ -12,24 +12,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM fedora
-
-# update package list & upgrade
-RUN dnf update  -y
-RUN dnf upgrade -y
-
-# install utilities
-RUN dnf install -y file tree vim
-
-# install project build & run toolchains
-RUN dnf install -y gcc 
-RUN dnf install -y gcc-c++ 
-RUN dnf install -y maven
-RUN dnf install -y make
-RUN dnf install -y nodejs
-RUN dnf install -y python3
-
-# copy project source files to image & remove generated files
-WORKDIR /project
-COPY . .
-RUN ./install.sh
+# Sieve of Eratosthenes location
+/usr/local/lib
