--- a/docker/libcsieve.conf
+++ b/docker/libcsieve.conf
@@ -12,5 +12,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Sieve of Eratosthenes location
+# Sieve of Eratosthenes shared library location
 /usr/local/lib
