Fix sieve lib and include paths

--- a/src/main/c/app3/Makefile
+++ b/src/main/c/app3/Makefile
@@ -22,8 +22,8 @@ OBJDIR = obj
 
 SIEVERANGE = 1000
 
-INCFLAGS = -I../../c/sieve
-LIBDIR = ../../c/sieve/lib
+INCFLAGS = -I../sieve
+LIBDIR = ../sieve/lib
 
 all: targets $(BINDIR)/app test
 
