--- a/src/main/c/Makefile
+++ b/src/main/c/Makefile
@@ -12,14 +12,18 @@
 # License for the specific language governing permissions and limitations
 # under the License.
 
-SUBDIRS := $(wildcard */)
+SUBDIRS := $(wildcard app*)
 
-all: $(SUBDIRS)
+all: sieve $(SUBDIRS)
 
-.PHONY: $(SUBDIRS) clean test
+.PHONY: sieve $(SUBDIRS) clean test
+
+sieve:
+	$(MAKE) --directory $@
 
 $(SUBDIRS):
-	$(MAKE) --no-print-directory -C $@
+	$(MAKE) --directory $@
 
 clean test:
-	@for subdir in $(SUBDIRS); do $(MAKE) --no-print-directory -C $$subdir $@; done
+	@$(MAKE) --directory sieve $@
+	@for subdir in $(SUBDIRS); do $(MAKE) --directory $$subdir $@; done
