Refactor C sieve impl to simplify wrapper impls
- Hide data members of csieve struct
- Declare all csieve functions as external
- Add new csievex (csieve extended) component that preserves the
  function pointer impl for C++ wrappers

--- a/src/main/c/Makefile
+++ b/src/main/c/Makefile
@@ -14,15 +14,28 @@
 
 SUBDIRS := $(wildcard app*)
 
-all: sieve $(SUBDIRS)
+all: sieve sievex $(SUBDIRS)
+	@# compile anything that needs to be compiled and then run
 
-.PHONY: sieve $(SUBDIRS) clean test
 sieve:
-	$(MAKE) --directory $@
+	@# run make with no arguments for sieve subdirectory
+	$(MAKE) --no-print-directory --directory $@
+
+sievex:
+	@# run make with no arguments for sievex subdirectory
+	$(MAKE) --no-print-directory --directory $@
 
 $(SUBDIRS):
-	$(MAKE) --directory $@
+	@# run make with no arguments for each subdirectory
+	$(MAKE) --no-print-directory --directory $@
 
 clean test:
-	@$(MAKE) --directory sieve $@
-	@for subdir in $(SUBDIRS); do $(MAKE) --directory $$subdir $@; done
+	@$(MAKE) --no-print-directory --directory sieve $@
+	@$(MAKE) --no-print-directory --directory sievex $@
+	@for subdir in $(SUBDIRS); do $(MAKE) --no-print-directory --directory $$subdir $@; done
+
+install:
+	@$(MAKE) --no-print-directory --directory sieve $@
+	@$(MAKE) --no-print-directory --directory sievex $@
+
+.PHONY: sieve sievex $(SUBDIRS) clean test install
