--- a/src/main/Makefile
+++ b/src/main/Makefile
@@ -15,10 +15,13 @@
 SUBDIRS := $(filter-out Makefile, $(wildcard *))
 
 all: $(SUBDIRS)
+	@# compile anything that needs to be compiled and then run
 
-.PHONY: $(SUBDIRS) clean test
 $(SUBDIRS):
-	$(MAKE) --directory $@
+	@# run make with no arguments for each subdirectory
+	$(MAKE) --no-print-directory --directory $@
 
-clean test:
-	@for subdir in $(SUBDIRS); do $(MAKE) --directory $$subdir $@; done
+clean test install:
+	@for subdir in $(SUBDIRS); do $(MAKE) --no-print-directory --directory $$subdir $@; done
+
+.PHONY: $(SUBDIRS) clean test install
