Use absolute csieve lib and inc paths
Signed-off-by: Shay Gordon <moebius.le.roi@gmail.com>

--- a/src/main/c/app2/Makefile
+++ b/src/main/c/app2/Makefile
@@ -22,8 +22,8 @@ OBJDIR = obj
 
 SIEVERANGE = 1000
 
-INCFLAGS = -I../sieve
-LIBDIR = ../sieve/lib
+INCFLAGS = -I/usr/local/include/
+LIBDIR = /usr/local/lib/
 
 all: targets $(BINDIR)/app test
 
