Add install target to go install to /Users/shay/go
Signed-off-by: Shay Gordon <moebius.le.roi@gmail.com>

--- a/src/main/go/Makefile
+++ b/src/main/go/Makefile
@@ -21,7 +21,7 @@ $(SUBDIRS):
 	@# run make with no arguments for each subdirectory
 	$(MAKE) --no-print-directory --directory $@
 
-clean test:
+clean test install:
 	@for subdir in $(SUBDIRS); do $(MAKE) --no-print-directory --directory $$subdir $@; done
 
 .PHONY: $(SUBDIRS) clean test install
