Add then remove gccgo compiler flag
The gcc-based go compiler has some advantages (speed notably) over the
standalone go compiler, but it's not available for all distros:

    https://blog.golang.org/gccgo-in-gcc-471

Alpine and macOS have no support for gccgo at all at present.

Signed-off-by: Shay Gordon <moebius.le.roi@gmail.com>

--- a/src/main/go/sieve/Makefile
+++ b/src/main/go/sieve/Makefile
@@ -13,11 +13,13 @@
 # limitations under the License.
 
 GO = go
+GOFLAGS = -compiler gccgo
+GOFLAGS =
 
 all: build
 
 build:
-	@$(GO) build .
+	@$(GO) build $(GOFLAGS) .
 
 clean:
 	@$(GO) clean
