Build go apps with ggcgo if installed
Also, add logging of builds so it's clear which compiler, go or gccgo,
was used to build each app.

Signed-off-by: Shay Gordon <moebius.le.roi@gmail.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -36,6 +36,9 @@ test-classes/
 # Python-generated files
 __pycache__/
 
+# Go makefile-generated files
+.build.log
+
 # END include .gitignore -----------------------------------------------------
 
 # Git files
