Add logging of all go commands
Split build into two scripts, one for app packages and one for
utility packages. Make the 'clean' rule keep the go commanf log file and
add a 'scrub' rule to remove the log as well as the generated files
removed by the 'clean' target.

Signed-off-by: Shay Gordon <moebius.le.roi@gmail.com>

--- a/src/main/go/app/Makefile
+++ b/src/main/go/app/Makefile
@@ -23,12 +23,12 @@ SIEVERANGE = 1000
 all: targets $(BINDIR)/app test
 
 $(BINDIR)/app : $(SRCDIR)/app.go
-	@$(BUILD) $@ $?
+	@$(BUILD) build $@ $?
 
 targets:
 	-@mkdir -p $(BINDIR)
 
-clean:
+clean scrub:
 	-@$(BUILD) $@
 	-@$(RM) -r $(BINDIR)
 
@@ -38,4 +38,4 @@ test:
 install:
 	-@$(BUILD) $@
 
-.PHONY: targets clean test install
+.PHONY: targets clean scrub test install
