Rename build to buildapp.sh and add version rule
The version rule captures the output from 'go version' to the local go
log file.

Signed-off-by: Shay Gordon <moebius.le.roi@gmail.com>

--- a/src/main/go/Makefile
+++ b/src/main/go/Makefile
@@ -25,8 +25,8 @@ $(SUBDIRS):
 	@# run make with no arguments for each subdirectory
 	$(MAKE) --no-print-directory --directory $@
 
-clean scrub test install:
+clean scrub test install version:
 	@$(MAKE) --no-print-directory --directory sieve $@
 	@for subdir in $(SUBDIRS); do $(MAKE) --no-print-directory --directory $$subdir $@; done
 
-.PHONY: sieve $(SUBDIRS) clean test install
+.PHONY: sieve $(SUBDIRS) clean scrub test install version
