Ignore local Go log files
Signed-off-by: Shay Gordon <moebius.le.roi@gmail.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -37,7 +37,7 @@ test-classes/
 __pycache__/
 
 # Go makefile-generated files
-.build.log
+.golog
 
 # END include .gitignore -----------------------------------------------------
 
