Add specialized docker containers
Add two additional docker containers, alpinec and alpinego, that
have C-only and Go- and C-only versions of the project. The Alpine Linux
distro was chosen because of its smnall footprint, makingit a popular
choice for embedded systems.

Signed-off-by: Shay Gordon <moebius.le.roi@gmail.com>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,6 +24,28 @@ services:
       - -f
       - /dev/null
 
+  alpinec:
+    build:
+      context: .
+      dockerfile: docker/alpinec.dockerfile
+    image: sieve:alpinec
+    container_name: alpinec
+    entrypoint:
+      - tail
+      - -f
+      - /dev/null
+
+  alpinego:
+    build:
+      context: .
+      dockerfile: docker/alpinego.dockerfile
+    image: sieve:alpinego
+    container_name: alpinego
+    entrypoint:
+      - tail
+      - -f
+      - /dev/null
+
   fedora:
     build:
       context: .
